[gd_scene load_steps=6 format=3 uid="uid://dp7e2cm3sjey7"]

[ext_resource type="Script" uid="uid://dpbbdsju207me" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://wv15rhdysf6y" path="res://scripts/points.gd" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://cain5ra83wyek" path="res://scripts/draw_lines_node_2d.gd" id="3_jyhfs"]
[ext_resource type="PackedScene" uid="uid://bj4rb8eh71n4r" path="res://scenes/ui.tscn" id="3_sugp2"]

[sub_resource type="ImageTexture" id="ImageTexture_jyhfs"]

[node name="Main" type="Node2D" node_paths=PackedStringArray("points", "ui", "draw_lines", "sub_viewport", "finalised_points_sprite_2d")]
script = ExtResource("1_o5qli")
points = NodePath("ActivePoints")
ui = NodePath("CanvasLayer/UI")
draw_lines = NodePath("ActivePoints/DrawLines")
sub_viewport = NodePath("SubViewport")
finalised_points_sprite_2d = NodePath("FinalisedPointsSprite2D")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="FinalisedPoints" type="MultiMeshInstance2D" parent="SubViewport"]

[node name="FinalisedPointsSprite2D" type="Sprite2D" parent="."]
use_parent_material = true
texture = SubResource("ImageTexture_jyhfs")
centered = false
region_rect = Rect2(1014.45, 405.986, 404.591, 449.501)

[node name="ActivePoints" type="MultiMeshInstance2D" parent="." node_paths=PackedStringArray("draw_lines", "point_timer", "sub_viewport", "finalised_points", "finalised_points_sprite_2d")]
script = ExtResource("2_0wfyh")
draw_lines = NodePath("DrawLines")
point_timer = NodePath("../PointTimer")
sub_viewport = NodePath("../SubViewport")
finalised_points = NodePath("../SubViewport/FinalisedPoints")
finalised_points_sprite_2d = NodePath("../FinalisedPointsSprite2D")

[node name="DrawLines" type="Node2D" parent="ActivePoints"]
z_index = -1
script = ExtResource("3_jyhfs")

[node name="PointTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" node_paths=PackedStringArray("sub_viewport") instance=ExtResource("3_sugp2")]
sub_viewport = NodePath("../../SubViewport")

[connection signal="timeout" from="PointTimer" to="ActivePoints" method="_on_point_timer_timeout"]
[connection signal="draw_line" from="CanvasLayer/UI" to="ActivePoints" method="_on_ui_draw_line"]
[connection signal="finalise_points" from="CanvasLayer/UI" to="ActivePoints" method="_on_ui_finalise_points"]
[connection signal="reset" from="CanvasLayer/UI" to="." method="_on_ui_reset"]
[connection signal="start" from="CanvasLayer/UI" to="." method="_on_ui_start"]
[connection signal="step" from="CanvasLayer/UI" to="." method="_on_ui_step"]
[connection signal="stop" from="CanvasLayer/UI" to="." method="_on_ui_stop"]
[connection signal="update_polygon" from="CanvasLayer/UI" to="." method="_on_ui_update_polygon"]
